fix(chip-input): align clear action button

--- a/css/src/components/chipInput.module.css
+++ b/css/src/components/chipInput.module.css
@@ -10,14 +10,14 @@
 
 .ChipInput--regular {
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: var(--spacing-15);
 }
 
 .ChipInput--small {
   align-items: center;
   min-height: var(--spacing-60);
   padding-left: var(--spacing-20);
-  padding-right: var(--spacing-20);
+  padding-right: var(--spacing-10);
 }
 
 .ChipInput:hover {
